hotfix/data-frame
  - Added the `data.frame()` argument `stringsAsFactors = FALSE` explicitly
  for compatibility with R <4.0.0. 

feature/jwt-file
  - Changed from using a litany of environment variables to auth with JWT to
  a simpler JSON file-based approach.

hotfix/segment-rsids
  - There is now a second argument for Report Suite ID for `aw_segment_table`,
  which allows the user to specify a vector of RSIDs for which to search for
  the segment IDs when making pretty names.