@@ -1,66 +1,43 @@
-#' Recursively query for data
+#' Get request data recursively
 #'
-#' @param current_dim Current dimension being queried
-#' @param item_ids Item IDs for previous dimensions
-#' @param dimensions All dimensions to be queried
-#' @param metrics Metrics in the request
-#' @param rsid Reportsuite ID
-#' @param global_filter Global filter list
-#' @param settings Settings list
-#' @param company_id Company ID
-#' @param debug Whether to debug
-#' @param sort How to sort results
-#' @param top Top N items to get. Assumes input is same length as dimensions.
-#' @param page Which page of results to get. Assumes input is same length as
-#'   dimensions.
-#' @param search Search clause in final form
+#' This modified version of `get_req_data` utilizes a query spec and an index
+#' to manage the recursive queries. Any query is defined by the query spec
+#' (stateless information), the index (current breakdown depth, 1-indexed),
+#' and the dimension item IDs used to filter the metrics.
 #'
-#' @return Data frame
+#' @param qs Query specification, generated by `make_query_spec()`
+#' @param index Current breakdown level, starting from 1.
+#' @param item_ids Dimension item IDs to include as filters for the metrics
+#' @param debug Logical, whether to show all debug information about the queries
+#' as they run
 #'
 #' @noRd
-get_req_data <- function(current_dim,
-                         item_ids,
-                         dimensions,
-                         metrics,
-                         rsid,
-                         global_filter,
-                         settings,
-                         company_id,
-                         debug,
-                         sort,
-                         top,
-                         page,
-                         search = NULL) {
-  # TODO Encapsulate common bit of this?
-  # TODO Simplify number of arguments?
-  pos_current_dim <- match(current_dim, dimensions)
-  previous_dims <- dimensions[seq_len(pos_current_dim - 1)]
-
-  if (length(previous_dims) == 0) {
-    previous_dims <- NULL
-    dateRange <- global_filter[[1]]$dateRange
-  } else {
-    dateRange <- NULL
-  }
-
+get_req_data <- function(
+  qs,
+  index,
+  item_ids,
+  debug
+) {
   mc <- metric_container(
-    metrics = metrics,
-    sort = sort,
-    dimensions = previous_dims,
-    itemIds = item_ids,
-    dateRange = dateRange
+    metrics = qs_metrics(qs),
+    sort = qs_sort(qs),
+    dimensions = if (index == 1) NULL else qs_dimensions(qs, seq_len(index - 1)),
+    itemIds = item_ids
   )
 
-  # Set top, page, and search for this query
-  settings$limit <- top[pos_current_dim]
-  settings$page <- page[pos_current_dim]
-  search_field <- list(clause = search[pos_current_dim] %||% NA)
+  settings <- req_settings(
+    limit = qs_top(qs, index),
+    page = qs_page(qs, index),
+    nonesBehavior = qs_nones_behavior(qs),
+    dimensionSort = qs_dimension_sort(qs)
+  )
+  search_field <- list(clause = qs_search(qs, index) %||% NA)
 
 
   req <- make_request(
-    rsid = rsid,
-    global_filter = global_filter,
-    dimension = paste("variables", current_dim, sep = "/"),
+    rsid = qs_rsid(qs),
+    global_filter = qs_global_filter(qs),
+    dimension = paste("variables", qs_dimensions(qs, index), sep = "/"),
     settings = settings,
     metric_container = mc,
     search = search_field
@@ -71,24 +48,23 @@ get_req_data <- function(current_dim,
     req_path = "reports/ranked",
     body = req,
     debug = debug,
-    company_id = company_id
+    company_id = qs_company_id(qs)
   ))
+
 
   # Increment progress bar
   increment_global_counter()
 
 
-  dimensions_so_far <- dimensions[seq(pos_current_dim, length(dimensions))]
-
   # Base case
-  if (pos_current_dim == length(dimensions)) {
+  if (index == length(qs_dimensions(qs))) {
     # If no data is returned, data$rows is an empty list, so handle that
     output_data <- fix_missing_metrics(data$rows,
-                                       n_metrics = length(metrics))
+                                       n_metrics = length(qs_metrics(qs)))
 
     output_data <- output_data %>%
-      dplyr::rename(!!current_dim := value) %>%
-      unpack_metrics(metrics)
+      dplyr::rename(!!qs_dimensions(qs, index) := value) %>%
+      unpack_metrics(qs_metrics(qs))
   }
   # Recursive case
   else {
@@ -96,40 +72,35 @@ get_req_data <- function(current_dim,
     if (identical(data$rows, list())) {
       output_data <- fix_missing_metrics(
         data$rows,
-        n_metrics = length(metrics),
-        dimensions = dimensions[pos_current_dim:length(dimensions)]
+        n_metrics = length(qs_metrics(qs)),
+        dimensions = qs_dimensions(qs, index:length(qs_dimensions(qs)))
       ) %>%
-        unpack_metrics(metrics)
+        unpack_metrics(qs_metrics(qs))
 
       return(output_data)
     }
 
-    next_dim <- dimensions[pos_current_dim + 1]
-    dim_items <- data$rows[c("itemId", "value")]
-    dim_items$recent_dim <- current_dim
+    next_dim <- qs_dimensions(qs, index + 1)
+    dim_items <- data$rows[, c("itemId", "value")]
+    dim_items$recent_dim <- qs_dimensions(qs, index)
     if (is.null(item_ids)) item_ids <- character()
 
 
     output_data <- purrr::pmap_dfr(dim_items, function(itemId, value, recent_dim) {
-      get_req_data(current_dim = next_dim,
-                   item_ids = c(item_ids, itemId),
-                   dimensions = dimensions,
-                   metrics = metrics,
-                   rsid = rsid,
-                   global_filter = global_filter,
-                   settings = settings,
-                   company_id = company_id,
-                   debug = debug,
-                   sort = sort,
-                   top = top,
-                   page = page,
-                   search = search) %>%
+      get_req_data(qs = qs,
+                    index = index + 1,
+                    item_ids = c(item_ids, itemId),
+                    debug = debug) %>%
         dplyr::mutate(!!recent_dim := value)
     })
   }
 
   output_data %>%
-    select(all_of(dimensions_so_far), all_of(metrics))
+    select(
+      # This first selection contains the current dimension and any dimensions
+      # that have been returned by lower levels of recursion
+      all_of(qs_dimensions(qs, index:length(qs_dimensions(qs)))),
+      all_of(qs_metrics(qs)))
 }
 
 
