@@ -1,3 +1,7 @@
+feature/all-rows
+  - Refactored `aw_freeform_table` and `get_req_data` to make use of a query
+  spec data structure. 
+
 hotfix/data-frame
   - Added the `data.frame()` argument `stringsAsFactors = FALSE` explicitly
   for compatibility with R <4.0.0. 
